syntax = "proto3";

option objc_class_prefix = "aufax";

package transaction;

service Transaction {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply) {}
  rpc GetSellOrders (GetSellOrdersRequest) returns (stream GetSellOrdersReply) {}
}

message CreateTransactionRequest {
  string user_id = 1;
  string from_currency = 2;
  string to_currency = 3;
  float amount = 4;
  string price_id = 5;
}

message CreateTransactionReply {
  string transaction_id = 1;
  string expires_at = 2;
}

message GetSellOrdersRequest {
  float amount = 1;
  string from_currency = 2;
  string to_currency = 3;
}

message GetSellOrdersReply {
  float amount = 1;
  string from_currency = 2;
  string to_currency = 3;
  float price = 4;
  string telegram_username = 5;
}

message EmptyReply {}